--- a/simulator/Dockerfile
+++ b/simulator/Dockerfile
@@ -8,10 +8,11 @@ RUN pip3 install -r requirements.txt
 
 COPY . .
 
+ARG GCP_PROJECT_ID
+ARG PUBSUB_TOPIC
+
 ENV GCP_PROJECT_ID=${GCP_PROJECT_ID}
-ENV GCP_PROJECT_ID=${GCP_PROJECT_ID}
-ENV GCP_PROJECT_ID=${GCP_PROJECT_ID}
+ENV PUBSUB_TOPIC=${PUBSUB_TOPIC}
 
 ENTRYPOINT [ "python3", "event_simulator.py"]
 
-#ZEND
